give structure to project

--- a/html/forget.html
+++ b/html/forget.html
@@ -2,46 +2,43 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=inpu, initial-scale=1.0">
+  <title>forget password page</title>
 
-  <title>SignUp Page</title>
-
-  <link rel="stylesheet" href="../css/signup.css">
-
+  <link rel="stylesheet" href="../css/forget.css">
 </head>
 
 <body>
-  <!-- <div id="navbar">
-      <div><a target="_blank" href="men.html">Men</a></div>
-      <div><a href="women.html">Women</a></div>
-      <div><a href="signup.html">Signup</a></div>
-      <div><a href="login.html">Login</a></div>
-    </div> -->
-<div id="heading">
-  <p>Create Account</p>
-</div>
-<div id="data">
-  <form>
 
-    <p>First Name</p>
-    <input id="firstname" type="text" />
-    <p>Last Name</p>
-    <input id="lastname" type="text" />
-    <p>Email</p>
-    <input id="email" type="email" />
-    <p>Password</p>
-    <input id="pass" type="text" />
-    <br>
-    <br>
-    <button id="btn_create">CREATE</button>
+  <div class="reset_password_page">
 
-  </form>
-</div>
+    <div class="reset_password">
+      <p>RESET YOUR PASSWORD</p>
+    </div>
+    <br>
+    <div class="reset_email_para">
+      <p>We will send you an email to reset your password.</p>
+    </div>
+    <br />
+
+    <div id="enter_email">
+      <p>Email</p>
+      <input type="email"> <br />
+    </div>
+    <div class="reset_submit">
+      <button>SUBMIT</button>
+      <br>
+      <br>
+      <div id="reset_cancel">
+      <a href="login.html">Cancel</a>
+    </div>
+    </div>
+  </div>
+ 
 
 <!-- footer code -->
-
 
 <div id="First_Footer">
   <div id="First_Footer_Item">
@@ -97,8 +94,7 @@
   </div>
   <p> © 2022, GIVA Jewellery </p>
 </div> 
-</body>
 
-<script src="signup.js"></script>
+</body>
 
 </html>
