--- a/html/login.html
+++ b/html/login.html
@@ -28,15 +28,16 @@
   <div id="login_bottom_part">
     <div id="forget_pass"><a href="forget.html">Forgot your password?</a></div>
 
-    <button id="btn_signin">SIGN IN</button>
+    <button onclick="loginFun()" id="btn_signin">SIGN IN</button>
     <br>
     <br>
     <br>
 
-    <div id="create_acc"><a href="singup.html">Create account</a></div>
+    <div id="create_acc"><a href="signup.html">Create account</a></div>
   </div>
   </form>
   <!-- </div> -->
+
 
   <!-- footer code -->
 
@@ -71,25 +72,25 @@
 
   <div id="Second_Footer">
     <div id="Second_Footer_Item_SocialMedia">
-      <div id="Second_Footer_logo"> <img src="media\Second_Footer_logo_facebook.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\Second_Footer_logo_instagram.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\Second_Footer_logo_youtube.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\Second_Footer_logo_linkedin.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/Second_Footer_logo_facebook.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/Second_Footer_logo_instagram.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/Second_Footer_logo_youtube.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/Second_Footer_logo_linkedin.png" /> </div>
     </div>
 
     <div id="Second_Footer_Item_Payment_Logo">
-      <div id="Second_Footer_logo"> <img src="media\airtel.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\amezon.jpg" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\amex.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\mastercard.jpg" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\mobi.webp" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\googlepay.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\emblem-Paypal.jpg" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\paytm.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\hdfc.jpg" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\rupay.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\visa.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\amex.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/airtel.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/amezon.jpg" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/amex.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/mastercard.jpg" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/mobi.webp" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/googlepay.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/emblem-Paypal.jpg" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/paytm.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/hdfc.jpg" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/rupay.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/visa.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/amex.png" /> </div>
 
     </div>
     <p> © 2022, GIVA Jewellery </p>
@@ -99,6 +100,6 @@
 
 </body>
 
-<script src="login.js"></script>
+<script src="../js/login.js"></script>
 
 </html>
