--- a/html/my_account.html
+++ b/html/my_account.html
@@ -90,25 +90,25 @@
 
   <div id="Second_Footer">
     <div id="Second_Footer_Item_SocialMedia">
-      <div id="Second_Footer_logo"> <img src="media\Second_Footer_logo_facebook.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\Second_Footer_logo_instagram.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\Second_Footer_logo_youtube.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\Second_Footer_logo_linkedin.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/Second_Footer_logo_facebook.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/Second_Footer_logo_instagram.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/Second_Footer_logo_youtube.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/Second_Footer_logo_linkedin.png" /> </div>
     </div>
 
     <div id="Second_Footer_Item_Payment_Logo">
-      <div id="Second_Footer_logo"> <img src="media\airtel.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\amezon.jpg" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\amex.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\mastercard.jpg" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\mobi.webp" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\googlepay.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\emblem-Paypal.jpg" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\paytm.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\hdfc.jpg" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\rupay.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\visa.png" /> </div>
-      <div id="Second_Footer_logo"> <img src="media\amex.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/airtel.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/amezon.jpg" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/amex.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/mastercard.jpg" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/mobi.webp" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/googlepay.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/emblem-Paypal.jpg" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/paytm.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/hdfc.jpg" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/rupay.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/visa.png" /> </div>
+      <div id="Second_Footer_logo"> <img src="../media/amex.png" /> </div>
 
     </div>
     <p> © 2022, GIVA Jewellery </p>
