--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
       <br>
   </div>
   <div id="login_bottom_part">
-    <div id="forget_pass"><a href="forget.html">Forgot your password?</a></div>
+    <div id="forget_pass"><a href="forget_pass.html">Forgot your password?</a></div>
 
     <button id="btn_signin">SIGN IN</button>
     <br>
