--- a/html/login.html
+++ b/html/login.html
@@ -33,7 +33,7 @@
     <br>
     <br>
 
-    <div id="create_acc"><a href="signup.html">Create account</a></div>
+    <div id="create_acc"><a href="singup.html">Create account</a></div>
   </div>
   </form>
   <!-- </div> -->
